--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div class="day">11</div>
                 <div class="day">12</div>
                 <div class="day">13</div>
-                <div class="day">14</div>
+                <div id="yoof" class="day">14<p>Roblox Meeting</p><img src="https://t7.rbxcdn.com/bcd1e11888d3aacbc5d591e1860083de" /></p></div>
             </div>
             <div class="row">
                 <div class="day">15</div>
